# dig-installer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  README.md  SPEC.md  build.rs  install.ps1  install.sh
.github/scripts/: check-version-agreement.sh
.github/workflows/: build-binaries.yml  ci.yml  cross-browser-ext-acceptance.yml  installer-e2e.yml  nightly-release.yml  release.yml
gui/app/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.js
gui/app/scripts/: stage-binary.mjs
gui/app/src/: App.jsx  FooterActions.jsx  FooterActions.test.jsx  TitleBar.jsx  bridge.js  data.jsx  main.jsx  steps.js  steps.test.js  styles.css
gui/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/app/src-tauri/src/: install.rs  lib.rs  main.rs
gui/app/src/i18n/: I18nProvider.jsx  LanguageSelector.jsx  locales.js  locales.test.js  step-i18n-completeness.test.js
gui/app/src/steps/: Browsers.jsx  Browsers.test.jsx  Components.jsx  Components.test.jsx  Finish.jsx  Finish.test.jsx  Installing.jsx  License.jsx  Welcome.jsx  render-smoke.test.jsx
gui/app/src/test/: renderWithIntl.jsx  setup.js
gui/assets/: BUILD_PROMPT.md  README.md
gui/assets/design/: DIG Installer.html
gui/assets/design/installer/: installer-app.jsx
runbooks/: cross-browser-ext-acceptance.md  deployment.md  local-running.md  release.md
src/: asset.rs  beacon.rs  browsers.rs  daemon_dir.rs  download.rs  elevation.rs  error.rs  firewall.rs  hardening.rs  health.rs  hosts.rs  lib.rs  main.rs  manifest.rs  migrate.rs  pathcheck.rs  paths.rs  proc.rs  regaudit.rs  release.rs  scheme.rs  secure.rs  service.rs  svc.rs  target.rs  uninstall.rs  update.rs
src/dns/: doctor.rs  linux.rs  macos.rs  mod.rs  os_config.rs  plan.rs  service_host.rs  windows.rs
src/forcelist/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: cli.rs  cross_browser_forcelist.rs  nightly_release_workflow_shape.rs
