# The universal DIG installer.
#
# By DEFAULT `dig-installer` installs the full DIG stack for the current OS/arch,
# from the canonical DIG-Network GitHub releases, in one run (#301):
#   * the `digstore` CLI binary, placed on PATH, along with its `digs` alias
#     binary (issue #434) — published in the SAME digstore release under its
#     own asset stem, installed alongside digstore with no flag of its own;
#   * the `dig-node` local-node binary, installed + started as a boot-start OS
#     service by delegating to dig-node's own `install`/`start` subcommands (it
#     is the standalone-server twin of the native DIG Browser's in-process
#     dig-node; see SYSTEM.md → dig-companion/dig-node); and
#   * `dig-dns` (local `*.dig` name resolution, #177/#174), installed + started
#     as a boot-start OS service — Windows Service / macOS LaunchDaemon / Linux
#     systemd — but, unlike dig-node/dig-relay, dig-dns ships no service
#     subcommands of its own, so this installer owns the full per-OS service +
#     split-DNS/NRPT + browser-policy wiring directly (`src/dns/`).
# Any of the three can be opted OUT with `--no-<component>`; `dig-relay` and the
# DIG Browser stay opt-in (`--with-relay`/`--with-browser`).
#
# It does NOT build either binary itself: digstore still `cargo`-builds and
# publishes the `digstore` binary from its own repo; dig-installer only CONSUMES
# those released artifacts. This is the canonical home of the DIG installer,
# migrated out of digstore (which previously shipped a Tauri GUI installer).
[package]
name = "dig-installer"
version = "0.7.1"
description = "Universal DIG installer — installs the digstore CLI, the dig-node service, and the dig-dns service by default (dig-relay + DIG Browser opt-in)"
authors = ["DIG Network"]
edition = "2021"
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-installer"
# Standalone single-crate repo — its own workspace root.

[[bin]]
name = "dig-installer"
path = "src/main.rs"

[lib]
name = "dig_installer"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Blocking HTTP with rustls (no system OpenSSL) — matches the digstore/dig-node
# crates' rustls-only posture so the installer is a self-contained binary.
ureq = { version = "2", default-features = false, features = ["tls", "json", "gzip"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
tempfile = "3"
# Cross-platform service manager (Windows SCM via sc.exe, Linux systemd,
# macOS launchd) — used to register dig-dns as an OS service (task #177):
# unlike dig-node/dig-relay (which register THEMSELVES via their own
# `install`/`start` subcommands), dig-dns ships no such subcommand, so
# dig-installer registers it directly. `ServiceInstallCtx.contents` lets us
# supply a fully custom unit-file/plist body (CAP_NET_BIND_SERVICE, a
# dedicated user, log paths) that the crate's own generator does not cover.
service-manager = "0.7"

[dev-dependencies]
# End-to-end CLI contract tests: drive the built `dig-installer` binary and
# assert its --help-json/--help/exit-code surface (no network).
assert_cmd = "2"

[target.'cfg(windows)'.dependencies]
# User-PATH update on Windows: read/write HKCU\Environment directly (no setx
# truncation) and broadcast WM_SETTINGCHANGE so new shells pick up the change.
winreg = "0.52"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
# Windows Service Control Protocol. `service-manager` only REGISTERS the
# service in the SCM; the binary the SCM launches must itself speak the
# service protocol (StartServiceCtrlDispatcher -> report RUNNING/STOPPED) or
# the SCM kills it with error 1053. dig-dns has no such entrypoint of its own
# (it is a plain blocking CLI), so dig-installer's OWN persisted binary hosts
# the service (the hidden `run-dig-dns-service` entrypoint) and spawns the
# real `dig-dns serve` as a child process. Mirrors dig-node-service's
# win_service.rs pattern (see DEVELOPMENT_LOG.md).
windows-service = "0.7"

[profile.release]
overflow-checks = true
opt-level = "s"
lto = true
strip = true
